[starship] add_newline true

--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -6,7 +6,7 @@
 #       modules themselves fairly compact.
 # --------------------------------------------------------------
 
-add_newline = false
+add_newline = true
 palette = "airline"
 
 # LEFT PROMPT: segments with powerline separators
