[chezmoi] [tmux] vim-motion oriented config with vim-tmux-navigator

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,162 +1,205 @@
-# ----------------------------------------------------------------------
-# Vim-friendly tmux configuration
-# ----------------------------------------------------------------------
+# -*- mode: conf -*-
+# tmux.conf - vim-motion oriented configuration
 
-# ----------------------------------------------------------------------
-# General settings
-# ----------------------------------------------------------------------
+#================================================================
+# 1. General Settings
+#================================================================
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
-# Use C-a as prefix (like screen, easier than C-b)
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
-
-# Enable true color (required for neovim themes)
-set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
-
-# Fix escape delay for vim/neovim
-set -sg escape-time 0
-
-# Enable focus events (for vim autoread)
-set -g focus-events on
-
-# Increase scrollback buffer
+set -g escape-time 0          # No delay for Esc (critical for vim)
 set -g history-limit 50000
-
-# Enable mouse support
-set -g mouse on
+set -g display-time 2000
+set -g focus-events on
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
-
-# Renumber windows when one is closed
 set -g renumber-windows on
 
-# Don't rename windows automatically
-set -g allow-rename off
+# Mouse support (optional - comment out if you prefer keyboard only)
+set -g mouse on
 
-# Refresh status more often
-set -g status-interval 5
+#================================================================
+# 2. Prefix Key
+#================================================================
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix           # C-a C-a sends literal C-a
 
-# ----------------------------------------------------------------------
-# Vi mode
-# ----------------------------------------------------------------------
-
-# Use vi keys in copy mode
-setw -g mode-keys vi
-
-# Vi-style copy/paste
-bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send -X copy-selection-and-cancel
-bind -T copy-mode-vi C-v send -X rectangle-toggle
-
-# Enter copy mode with prefix + Escape (like vim)
-bind Escape copy-mode
-
-# Paste with prefix + p
-bind p paste-buffer
-
-# ----------------------------------------------------------------------
-# Pane navigation (vim-style hjkl)
-# ----------------------------------------------------------------------
-
-# Move between panes with prefix + hjkl
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# Smart pane switching with awareness of vim splits
-# Requires vim-tmux-navigator plugin in neovim
+#================================================================
+# 3. Pane Navigation (via vim-tmux-navigator)
+#================================================================
+# Seamless C-h/j/k/l navigation between vim splits and tmux panes
+# See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
-bind -n C-h if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
-bind -n C-j if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
-bind -n C-k if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-bind -n C-l if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+bind-key -n 'C-\' if-shell "$is_vim" 'send-keys C-\\' 'select-pane -l'
 
-# Resize panes with prefix + HJKL (uppercase)
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+#================================================================
+# 4. Pane Splitting (vim-style)
+#================================================================
+# | for vertical split (like vim <C-w>v)
+# - for horizontal split (like vim <C-w>s)
+bind | split-window -h -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# Keep default % and " as well
+bind % split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
+
+#================================================================
+# 5. Pane Resizing (Shift + hjkl)
+#================================================================
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-# ----------------------------------------------------------------------
-# Window/pane management (vim-style splits)
-# ----------------------------------------------------------------------
+# Fine-grained resize with Alt
+bind -r M-h resize-pane -L 1
+bind -r M-j resize-pane -D 1
+bind -r M-k resize-pane -U 1
+bind -r M-l resize-pane -R 1
 
-# Split panes using | and - (more intuitive)
-# Open in current directory
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
-unbind '"'
-unbind %
-
-# Vim-style splits (matching vim :sp and :vs behavior)
-bind s split-window -v -c "#{pane_current_path}"   # like :sp (stacked)
-bind v split-window -h -c "#{pane_current_path}"   # like :vs (side-by-side)
-
-# New window in current directory
+#================================================================
+# 6. Window Navigation
+#================================================================
 bind c new-window -c "#{pane_current_path}"
+bind n next-window
+bind p previous-window
+bind Tab last-window           # Toggle last window
 
-# Quick window switching
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
+# Quick window switching (Alt + number, no prefix needed)
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
+bind -n M-9 select-window -t 9
 
-# ----------------------------------------------------------------------
-# Reload and quick commands
-# ----------------------------------------------------------------------
+#================================================================
+# 7. Copy Mode (vi-style)
+#================================================================
+setw -g mode-keys vi
+set -g status-keys vi
 
-# Reload config with prefix + r
+bind [ copy-mode
+bind ] paste-buffer
+
+# vi-style selection and yank
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi V send-keys -X select-line
+bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+
+# Search
+bind -T copy-mode-vi / command-prompt -i -p "search down" "send -X search-forward-incremental \"%%%\""
+bind -T copy-mode-vi ? command-prompt -i -p "search up" "send -X search-backward-incremental \"%%%\""
+
+#================================================================
+# 8. Session Management
+#================================================================
+bind s choose-tree -Zs          # Session picker
+bind S command-prompt -p "New session:" "new-session -s '%%'"
+bind X confirm-before -p "Kill session #S? (y/n)" kill-session
+
+#================================================================
+# 9. Utility Bindings
+#================================================================
 bind r source-file ~/.tmux.conf \; display "Config reloaded!"
+bind x kill-pane                # No confirm for pane (use X for session)
+bind q display-panes            # Show pane numbers
+bind z resize-pane -Z           # Toggle zoom
+bind Space next-layout          # Cycle layouts
 
-# Quick pane cycling with prefix + a
-bind a select-pane -t :.+
+# Clear screen and history
+bind C-l send-keys 'C-l' \; clear-history
 
-# Kill pane without confirmation
-bind x kill-pane
-
-# Kill window with prefix + X
-bind X kill-window
-
-# ----------------------------------------------------------------------
-# Status bar (minimal, matches starship aesthetic)
-# ----------------------------------------------------------------------
-
+#================================================================
+# 10. Status Bar
+#================================================================
+set -g status on
+set -g status-interval 5
 set -g status-position bottom
-set -g status-style 'bg=#1c1c1c fg=#DCDCDC'
+
+# Colors (matching your airline/starship aesthetic)
+set -g status-style "bg=#2a2a2a,fg=#dcdcdc"
 
 # Left: session name
 set -g status-left-length 30
-set -g status-left '#[fg=#1c1c1c,bg=#A7C7E7,bold] #S #[fg=#A7C7E7,bg=#1c1c1c]'
+set -g status-left "#[bg=#A7C7E7,fg=#1c1c1c,bold] #S #[bg=#2a2a2a,fg=#A7C7E7]"
 
-# Right: host and time
+# Right: time
 set -g status-right-length 50
-set -g status-right '#[fg=#C8D3CF]#[fg=#1c1c1c,bg=#C8D3CF] #H #[fg=#E8C875,bg=#C8D3CF]#[fg=#1c1c1c,bg=#E8C875] %H:%M '
+set -g status-right "#[fg=#C8D3CF]#[bg=#C8D3CF,fg=#1c1c1c] %H:%M #[fg=#A7C7E7]#[bg=#A7C7E7,fg=#1c1c1c,bold] #h "
 
 # Window status
-set -g window-status-format ' #I:#W '
-set -g window-status-current-format '#[fg=#1c1c1c,bg=#E0B0DF,bold] #I:#W #[fg=#E0B0DF,bg=#1c1c1c]'
+set -g status-justify left
+setw -g window-status-format "#[fg=#888888] #I:#W "
+setw -g window-status-current-format "#[fg=#FFA590]#[bg=#FFA590,fg=#1c1c1c,bold] #I:#W #[fg=#FFA590,bg=#2a2a2a]"
 
 # Pane borders
-set -g pane-border-style 'fg=#444444'
-set -g pane-active-border-style 'fg=#A7C7E7'
+set -g pane-border-style "fg=#444444"
+set -g pane-active-border-style "fg=#A7C7E7"
 
 # Message style
-set -g message-style 'fg=#1c1c1c bg=#E8C875 bold'
+set -g message-style "bg=#E8C875,fg=#1c1c1c,bold"
 
-# ----------------------------------------------------------------------
-# TPM (Tmux Plugin Manager) - optional
-# Install: git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
-# ----------------------------------------------------------------------
+#================================================================
+# 11. Plugins (via TPM)
+#================================================================
+# Install TPM first:
+#   git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+#
+# Plugin management (command-line, no shortcuts):
+#   ~/.tmux/plugins/tpm/bin/install_plugins
+#   ~/.tmux/plugins/tpm/bin/update_plugins all
+#   ~/.tmux/plugins/tpm/bin/clean_plugins
 
-# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'        # System clipboard support
-set -g @plugin 'christoomey/vim-tmux-navigator' # Seamless vim/tmux navigation
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# Initialize TPM (keep at bottom)
-run -b '~/.tmux/plugins/tpm/tpm'
+# Disable TPM shortcut keys (use command-line instead)
+set -g @tpm-install 'M-F12'
+set -g @tpm-update 'M-F12'
+set -g @tpm-clean 'M-F12'
+
+# tmux-resurrect: save/restore sessions
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-vim 'session'
+
+# tmux-continuum: auto-save every 10 min, auto-restore on start
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '10'
+
+# Initialize TPM (keep at very bottom)
+run '~/.tmux/plugins/tpm/tpm'
+
+#================================================================
+# Quick Reference (prefix = C-a)
+#================================================================
+# Navigation:    C-h/j/k/l   - move between panes (no prefix, via vim-tmux-navigator)
+# Splits:        |           - vertical, - horizontal
+# Resize:        H/J/K/L     - resize panes
+# Windows:       c/n/p/Tab   - new/next/prev/last
+#                Alt+1-9     - jump to window (no prefix)
+# Copy mode:     [           - enter, v select, y yank
+# Reload:        r           - reload config
+# Zoom:          z           - toggle pane zoom
