[chezmoi] [tmux] add resurrect save/restore shortcuts C-s/C-r

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -184,6 +184,8 @@ set -g @tpm-clean 'M-F12'
 # tmux-resurrect: save/restore sessions
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-save 'C-s'
+set -g @resurrect-restore 'C-r'
 
 # tmux-continuum: auto-save every 10 min, auto-restore on start
 set -g @continuum-restore 'on'
@@ -201,5 +203,6 @@ run '~/.tmux/plugins/tpm/tpm'
 # Windows:       c/n/p/Tab   - new/next/prev/last
 #                Alt+1-9     - jump to window (no prefix)
 # Copy mode:     [           - enter, v select, y yank
+# Sessions:      C-s/C-r     - save/restore (resurrect)
 # Reload:        r           - reload config
 # Zoom:          z           - toggle pane zoom
