--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -32,8 +32,7 @@ bind C-a send-prefix           # C-a C-a sends literal C-a
 #================================================================
 # Seamless C-h/j/k/l navigation between vim splits and tmux panes
 # See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
 bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
 bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
 bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
@@ -201,7 +200,6 @@ run '~/.tmux/plugins/tpm/tpm'
 # Splits:        |           - vertical, - horizontal
 # Resize:        H/J/K/L     - resize panes
 # Windows:       c/n/p/Tab   - new/next/prev/last
-#                Alt+1-9     - jump to window (no prefix)
 # Copy mode:     [           - enter, v select, y yank
 # Sessions:      C-s/C-r     - save/restore (resurrect)
 # Reload:        r           - reload config
