[tmux] rm unused binds

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -54,10 +54,6 @@ bind | split-window -h -c "#{pane_current_path}"
 bind \\ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
-# Keep default % and " as well
-bind % split-window -h -c "#{pane_current_path}"
-bind '"' split-window -v -c "#{pane_current_path}"
-
 #================================================================
 # 5. Pane Resizing (Shift + hjkl)
 #================================================================
@@ -66,30 +62,13 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-# Fine-grained resize with Alt
-bind -r M-h resize-pane -L 1
-bind -r M-j resize-pane -D 1
-bind -r M-k resize-pane -U 1
-bind -r M-l resize-pane -R 1
-
 #================================================================
 # 6. Window Navigation
 #================================================================
+unbind l
 bind c new-window -c "#{pane_current_path}"
 bind n next-window
 bind p previous-window
-bind Tab last-window           # Toggle last window
-
-# Quick window switching (Alt + number, no prefix needed)
-bind -n M-1 select-window -t 1
-bind -n M-2 select-window -t 2
-bind -n M-3 select-window -t 3
-bind -n M-4 select-window -t 4
-bind -n M-5 select-window -t 5
-bind -n M-6 select-window -t 6
-bind -n M-7 select-window -t 7
-bind -n M-8 select-window -t 8
-bind -n M-9 select-window -t 9
 
 #================================================================
 # 7. Copy Mode (vi-style)
