[tmux] fix C-l cleanup bind

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -70,6 +70,9 @@ bind c new-window -c "#{pane_current_path}"
 bind n next-window
 bind p previous-window
 
+# Clear screen and history
+bind l send-keys 'C-l' \; clear-history
+
 #================================================================
 # 7. Copy Mode (vi-style)
 #================================================================
@@ -105,9 +108,6 @@ bind x kill-pane                # No confirm for pane (use X for session)
 bind q display-panes            # Show pane numbers
 bind z resize-pane -Z           # Toggle zoom
 bind Space next-layout          # Cycle layouts
-
-# Clear screen and history
-bind C-l send-keys 'C-l' \; clear-history
 
 #================================================================
 # 10. Status Bar
