[tmux] highlight pane borders colours

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -133,8 +133,9 @@ setw -g window-status-format "#[fg=#888888] #I:#W "
 setw -g window-status-current-format "#[fg=#FFA590]#[bg=#FFA590,fg=#1c1c1c,bold] #I:#W #[fg=#FFA590,bg=#2a2a2a]"
 
 # Pane borders
-set -g pane-border-style "fg=#444444"
-set -g pane-active-border-style "fg=#A7C7E7"
+set -g pane-border-style fg=colour238,bg=default
+set -g pane-active-border-style fg=colour208,bg=default
+set -g pane-border-status off
 
 # Message style
 set -g message-style "bg=#E8C875,fg=#1c1c1c,bold"
