[feat] add tmux-net-speed plugin config

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -153,6 +153,7 @@ set -g message-style "bg=#E8C875,fg=#1c1c1c,bold"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-net-speed'
 
 # Disable TPM shortcut keys (use command-line instead)
 set -g @tpm-install 'M-F12'
@@ -168,6 +169,11 @@ set -g @resurrect-restore 'C-r'
 # tmux-continuum: auto-save every 10 min, auto-restore on start
 set -g @continuum-restore 'on'
 set -g @continuum-save-interval '10'
+
+# Network speed (via tmux-net-speed plugin)
+set -g @net_speed_interfaces "en0 en4 en5 en6 en8"
+set -g @download_speed_format "↓%s"
+set -g @upload_speed_format "↑%s"
 
 # Initialize TPM (keep at very bottom)
 run '~/.tmux/plugins/tpm/tpm'
