[feat] add Nord status bar with net info

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -122,9 +122,9 @@ set -g status-style "bg=#2a2a2a,fg=#dcdcdc"
 set -g status-left-length 30
 set -g status-left "#[bg=#A7C7E7,fg=#1c1c1c,bold] #S #[bg=#2a2a2a,fg=#A7C7E7]"
 
-# Right: time
-set -g status-right-length 50
-set -g status-right "#[fg=#C8D3CF]#[bg=#C8D3CF,fg=#1c1c1c] %H:%M #[fg=#A7C7E7]#[bg=#A7C7E7,fg=#1c1c1c,bold] #h "
+# Right: net type + speed + time (Nord interleaved colors)
+set -g status-right-length 80
+set -g status-right "#[fg=#5E81AC]#[bg=#5E81AC,fg=#ECEFF4] #{net_type} #{download_speed} #{upload_speed} #[bg=#EBCB8B,fg=#5E81AC]#[bg=#EBCB8B,fg=#2E3440] 󰥔 %H:%M 󰃭 %d/%b #[fg=#8FBCBB,bg=#EBCB8B]#[bg=#8FBCBB,fg=#2E3440,bold] 󰌢 #{smart_host} "
 
 # Window status
 set -g status-justify left
