[tmux] use tab for nav to next window

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -66,8 +66,7 @@ bind -r L resize-pane -R 5
 #================================================================
 unbind l
 bind c new-window -c "#{pane_current_path}"
-bind n next-window
-bind p previous-window
+bind Tab next-window
 
 # Clear screen and history
 bind l send-keys 'C-l' \; clear-history
@@ -184,7 +183,7 @@ run '~/.tmux/plugins/tpm/tpm'
 # Navigation:    C-h/j/k/l   - move between panes (no prefix, via vim-tmux-navigator)
 # Splits:        |           - vertical, - horizontal
 # Resize:        H/J/K/L     - resize panes
-# Windows:       c/n/p/Tab   - new/next/prev/last
+# Windows:       c/Tab       - new/last
 # Copy mode:     [           - enter, v select, y yank
 # Sessions:      C-s/C-r     - save/restore (resurrect)
 # Reload:        r           - reload config
