--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -112,7 +112,7 @@ bind Space next-layout          # Cycle layouts
 #================================================================
 set -g status on
 set -g status-interval 5
-set -g status-position bottom
+set -g status-position top
 
 # Colors (matching your airline/starship aesthetic)
 set -g status-style "bg=#2a2a2a,fg=#dcdcdc"
