--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -94,7 +94,7 @@ bind -T copy-mode-vi ? command-prompt -i -p "search up" "send -X search-backward
 #================================================================
 # 8. Session Management
 #================================================================
-bind s choose-tree -Zs          # Session picker
+bind s choose-tree -Zs # Session Expose
 bind S command-prompt -p "New session:" "new-session -s '%%'"
 bind X confirm-before -p "Kill session #S? (y/n)" kill-session
 
