[starship] replace apple glyph

--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -123,7 +123,7 @@ hn="$(hostname -s)"
 
 # If hostname equals username → show "me"
 if [ "$hn" = 'Lab-S-Yehudats-MacBook-Pro' ]; then
-  echo 
+  echo 󰀵
   exit 0
 fi
 
